--- a/src/main/resources/templates/client/list.html
+++ b/src/main/resources/templates/client/list.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      th:with="activeTab='client'"
+      th:with="activeTab='permission'"
       layout:decorate="~{layout}">
     <head>
         <title>Aplikasi Penggadaian</title>
@@ -10,7 +9,90 @@
     </head>
     <body>
         <section layout:fragment="content">
-            <h1>isi konten disini</h1>
+            <div class="col-lg-12">
+                <p>
+                    <a th:href="@{/permission/form}" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Data Permission</a>
+                    &nbsp; &nbsp;
+                </p>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="card">
+                            <div class="card-header d-flex align-items-center">
+                                <h3 class="h4">Cari Data User</h3>
+                            </div>
+                            <div class="card-body">
+                                <form class="form-inline" th:action="@{/permission/list}" method="get">
+                                    <div class="form-group">
+                                        <label for="search" class="sr-only">Search</label>
+                                        <input type="text" 
+                                               name="key" 
+                                               placeholder="Label" 
+                                               class="mx-sm-3 form-control" 
+                                               th:if="${key == null}">
+                                        <input type="text" 
+                                               name="key" 
+                                               placeholder="Value" 
+                                               class="mx-sm-3 form-control" 
+                                               th:if="${key != null}"
+                                               th:value="${key}">
+                                        <button class="btn btn-info" type="submit"><i class="fa fa-search"></i> Search</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="card">
+                            <div class="card-header d-flex align-items-center">
+                                <h3 class="h4">List Permission</h3>
+                            </div>
+                            <div class="card-body" style="overflow-x:auto;">
+                                <table class="table table-striped table-hover scroll-horizontal">
+                                    <thead>
+                                        <tr>
+                                            <th style="white-space: nowrap">App Name</th>
+                                            <th style="white-space: nowrap">Client Id</th>
+                                            <th style="white-space: nowrap">Client Secret</th>
+                                            <th style="white-space: nowrap">Scope</th>
+                                            <th style="white-space: nowrap">Resource Id</th>
+                                            <th style="white-space: nowrap">Authorized Grant Type</th>
+                                            <th style="white-space: nowrap">Redirect Url</th>
+                                            <th style="white-space: nowrap">Authorities</th>
+                                            <th style="white-space: nowrap">Access Token Validity</th>
+                                            <th style="white-space: nowrap">Refresh Token Validity</th>
+                                            <th style="white-space: nowrap">Additional Information</th>
+                                            <th style="white-space: nowrap">Autoapprove</th>
+                                            <th style="white-space: nowrap">Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>001</td>
+                                            <td>001</td>
+                                            <td>Example Data</td>
+                                            <td>Example Data</td>
+                                            <td>Example Data</td>
+                                            <td>Example Data</td>
+                                            <td>Example Data</td>
+                                            <td>Example Data</td>
+                                            <td>Example Data</td>
+                                            <td>Example Data</td>
+                                            <td>Example Data</td>
+                                            <td>Example Data</td>
+                                            <td  style="white-space: nowrap">
+                                                <a class="btn btn-info btn-sm">
+                                                    <i class="fa fa-edit"></i> Edit</a>
+                                                <a class="btn btn-danger btn-sm">
+                                                    <i class="fa fa-trash"></i> Delete</a>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
 </html>
