--- a/src/main/resources/templates/permission/list.html
+++ b/src/main/resources/templates/permission/list.html
@@ -10,7 +10,80 @@
     </head>
     <body>
         <section layout:fragment="content">
-            <h1>isi konten disini</h1>
+            <div class="col-lg-12">
+                <p>
+                    <a th:href="@{/management/permission/form}" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Data Permission</a>
+                    &nbsp; &nbsp;
+                </p>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="card">
+                            <div class="card-header d-flex align-items-center">
+                                <h3 class="h4">Cari Data Permission</h3>
+                            </div>
+                            <div class="card-body">
+                                <form class="form-inline" th:action="@{management/permission/list}" method="get">
+                                    <div class="form-group">
+                                        <label for="search" class="sr-only">Search</label>
+                                        <input type="text" 
+                                               name="key" 
+                                               placeholder="Label" 
+                                               class="mx-sm-3 form-control" 
+                                               th:if="${key == null}">
+                                        <input type="text" 
+                                               name="key" 
+                                               placeholder="Value" 
+                                               class="mx-sm-3 form-control" 
+                                               th:if="${key != null}"
+                                               th:value="${key}">
+                                        <button class="btn btn-info" type="submit"><i class="fa fa-search"></i> Search</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="card">
+                            <div class="card-header d-flex align-items-center">
+                                <h3 class="h4">List Permission</h3>
+                            </div>
+                            <div class="card-body">
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>Value</th>
+                                            <th>Label</th>
+                                            <th>Action</th>
+                                            <th>&nbsp;</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr th:each="p : ${data.content}">
+                                            <td th:text="${p.permissionLabel}"></td>
+                                            <td th:text="${p.permissionValue}"></td>
+                                            <td>
+                                                <a th:href="@{/management/permission/form(id=${p.id})}">    
+                                                    <button class="btn btn-info btn-sm ladda-button"><i class="fa fa-pencil"></i> edit</button>
+                                                </a>
+                                                <a th:href="@{/management/permission/delete(id=${p.id})}">
+                                                    <button class="btn btn-danger btn-sm ladda-button"><i class="fa fa-trash"></i> Delete</button>
+                                                </a>
+                                            </td>
+                                        </tr> 
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="card-footer">
+                                <center>
+                                    <div th:if="${not #lists.isEmpty(data.content)}">
+                                        <ul class="pagination" sd:pagination="full"></ul>
+                                    </div>
+                                </center>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
 </html>
