--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -10,7 +10,86 @@
     </head>
     <body>
         <section layout:fragment="content">
-            <h1>isi konten disini</h1>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p>
+                            <a th:href="@{/management/user/form}" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Data Debitur</a>
+                            &nbsp; &nbsp;
+                        </p>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="card">
+                                    <div class="card-header d-flex align-items-center">
+                                        <h3 class="h4">Cari Data User</h3>
+                                    </div>
+                                    <div class="card-body">
+                                        <form class="form-inline" th:action="@{/management/user/list}" method="get">
+                                            <div class="form-group">
+                                                <label for="search" class="sr-only">Search</label>
+                                                <input type="text" 
+                                                       name="key" 
+                                                       placeholder="Username" 
+                                                       class="mx-sm-3 form-control" 
+                                                       th:if="${key == null}">
+                                                <input type="text" 
+                                                       name="key" 
+                                                       placeholder="Username" 
+                                                       class="mx-sm-3 form-control" 
+                                                       th:if="${key != null}"
+                                                       th:value="${key}">
+                                                <button class="btn btn-info" type="submit"><i class="fa fa-search"></i> Search</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="card">
+                                    <div class="card-header d-flex align-items-center">
+                                        <h3 class="h4">Daftar User</h3>
+                                    </div>
+                                    <div class="card-body">
+                                        <table class="table table-striped table-hover">
+                                            <thead>
+                                                <tr>
+                                                    <th>Email</th>
+                                                    <th>Full Name</th>
+                                                    <th>Username</th>
+                                                    <th>Role</th>
+                                                    <th>Action</th>
+                                                    <th>&nbsp;</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr th:each="user : ${data.content}">
+                                                    <td><span th:text="${user.email}"></span></td>
+                                                    <td><span th:text="${user.fullname}"></span></td>
+                                                    <td><span th:text="${user.username}"></span></td>
+                                                    <td><span th:text="${user.role.name}"></span></td>
+                                                    <td>
+                                                        <a th:href="@{/management/user/form(id=${user.id})}">
+                                                            <button class="btn btn-info btn-sm ladda-button"><i class="fa fa-pencil"></i> edit</button>
+                                                        </a>
+                                                        <a th:href="@{/management/user/delete(id=${user.id})}">
+                                                            <button class="btn btn-danger btn-sm ladda-button"><i class="fa fa-trash"></i> Delete</button>
+                                                        </a>
+                                                    </td>
+                                                </tr> 
+                                            </tbody>
+                                        </table>
+                                        <div class="box-footer clearfix text-center">
+                                            <div th:if="${not #lists.isEmpty(data.content)}">
+                                                <ul class="pagination" sd:pagination="full"></ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
 </html>
