--- a/src/main/resources/templates/client/list.html
+++ b/src/main/resources/templates/client/list.html
@@ -1,32 +1,50 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      th:with="activeTab='permission'"
+      th:with="activeTab='client'"
       layout:decorate="~{layout}">
     <head>
         <title>Aplikasi Penggadaian</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- <style>
+                div.scrollmenu {
+                    background-color: #3338;
+                    overflow: auto;
+                    white-space: nowrap;
+                }
+
+                div.scrollmenu a {
+                    display: inline-block;
+                    color: white;
+                    text-align: center;
+                    padding: 14px;
+                    text-decoration: none;
+                }
+
+
+        </style> -->
     </head>
+
     <body>
         <section layout:fragment="content">
             <div class="col-lg-12">
                 <p>
-                    <a th:href="@{/permission/form}" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Data Permission</a>
+                    <a th:href="@{/management/client/form}" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Data Client</a>
                     &nbsp; &nbsp;
                 </p>
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-6">
                         <div class="card">
                             <div class="card-header d-flex align-items-center">
                                 <h3 class="h4">Cari Data User</h3>
                             </div>
                             <div class="card-body">
-                                <form class="form-inline" th:action="@{/permission/list}" method="get">
+                                <form class="form-inline" th:action="@{management/permission/list}" method="get">
                                     <div class="form-group">
                                         <label for="search" class="sr-only">Search</label>
                                         <input type="text" 
                                                name="key" 
-                                               placeholder="Label" 
+                                               placeholder="Search" 
                                                class="mx-sm-3 form-control" 
                                                th:if="${key == null}">
                                         <input type="text" 
@@ -41,56 +59,71 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-12">
+                    <div class="container-fluid">
+                        <div class="row">
+                    <div class="col-lg-6">
                         <div class="card">
                             <div class="card-header d-flex align-items-center">
-                                <h3 class="h4">List Permission</h3>
+                                <h3 class="h4">Client List</h3>
                             </div>
-                            <div class="card-body" style="overflow-x:auto;">
-                                <table class="table table-striped table-hover scroll-horizontal">
-                                    <thead>
-                                        <tr>
-                                            <th style="white-space: nowrap">App Name</th>
-                                            <th style="white-space: nowrap">Client Id</th>
-                                            <th style="white-space: nowrap">Client Secret</th>
-                                            <th style="white-space: nowrap">Scope</th>
-                                            <th style="white-space: nowrap">Resource Id</th>
-                                            <th style="white-space: nowrap">Authorized Grant Type</th>
-                                            <th style="white-space: nowrap">Redirect Url</th>
-                                            <th style="white-space: nowrap">Authorities</th>
-                                            <th style="white-space: nowrap">Access Token Validity</th>
-                                            <th style="white-space: nowrap">Refresh Token Validity</th>
-                                            <th style="white-space: nowrap">Additional Information</th>
-                                            <th style="white-space: nowrap">Autoapprove</th>
-                                            <th style="white-space: nowrap">Action</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>001</td>
-                                            <td>001</td>
-                                            <td>Example Data</td>
-                                            <td>Example Data</td>
-                                            <td>Example Data</td>
-                                            <td>Example Data</td>
-                                            <td>Example Data</td>
-                                            <td>Example Data</td>
-                                            <td>Example Data</td>
-                                            <td>Example Data</td>
-                                            <td>Example Data</td>
-                                            <td>Example Data</td>
-                                            <td  style="white-space: nowrap">
-                                                <a class="btn btn-info btn-sm">
-                                                    <i class="fa fa-edit"></i> Edit</a>
-                                                <a class="btn btn-danger btn-sm">
-                                                    <i class="fa fa-trash"></i> Delete</a>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                            <div class="card-body">
+                                <div class="table-responsive">
+                                    <table class="table">
+                                        <thead>
+                                            <tr>
+                                                <th style="white-space: nowrap">App Name</th>
+                                                <th style="white-space: nowrap">Client Id</th>
+                                                <th style="white-space: nowrap">Client Secret</th>
+                                                <th style="white-space: nowrap">Scope</th>
+                                                <th style="white-space: nowrap">Resource Id</th>
+                                                <th style="white-space: nowrap">Authorized Grant Type</th>
+                                                <th style="white-space: nowrap">Redirect Url</th>
+                                                <th style="white-space: nowrap">Authorities</th>
+                                                <th style="white-space: nowrap">Access Token Validity</th>
+                                                <th style="white-space: nowrap">Refresh Token Validity</th>
+                                                <th style="white-space: nowrap">Additional Information</th>
+                                                <th style="white-space: nowrap">Autoapprove</th>
+                                                <th style="white-space: nowrap">Action</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr th:each="c : ${dataClient.content}">
+                                                <td th:text="${c.appName}">001</td>
+                                                <td th:text="${c.clientId}">001</td>
+                                                <td th:text="${c.clientSecret}">Example Data</td>
+                                                <td th:text="${c.scope}">Example Data</td>
+                                                <td th:text="${c.resourceId}">Example Data</td>
+                                                <td th:text="${c.authorizedGrantTypes}">Example Data</td>
+                                                <td th:text="${c.redirectUri}">Example Data</td>
+                                                <td th:text="${c.authorities}">Example Data</td>
+                                                <td th:text="${c.accessTokenValidity}">Example Data</td>
+                                                <td th:text="${c.refreshTokenValidity}">Example Data</td>
+                                                <td th:text="${c.additionalInformation}">Example Data</td>
+                                                <td th:text="${c.autoApprove}">Example Data</td>
+                                                <td  style="white-space: nowrap">
+                                                    <a th:href="@{/management/client/form(id=${c.id})}" 
+                                                       class="btn btn-info btn-sm">
+                                                        <i class="fa fa-edit"></i> Edit</a>
+                                                    <a th:href="@{/management/client/delete(id=${c.id})}" 
+                                                       class="btn btn-danger btn-sm">
+                                                        <i class="fa fa-trash"></i> Delete</a>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div class="card-footer">
+                                    <center>
+                                        <div th:if="${not #lists.isEmpty(dataClient.content)}">
+                                            <ul class="pagination" sd:pagination="full"></ul>
+                                        </div>
+                                    </center>
+                                </div>
                             </div>
                         </div>
                     </div>
+                                            </div>
+                                        </div>
                 </div>
             </div>
         </section>
