--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,11 @@
     </head>
     <body>
         <section layout:fragment="content">
-            <h1>Welcome ...</h1>
+            <div class="container-fluid">
+                <div class="row">
+                    <h1>Welcome ...</h1>
+                </div>
+            </div>
         </section>
     </body>
 </html>
