--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,4 +1,4 @@
-\\\\<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
@@ -83,11 +83,11 @@
                         </div>
                     </header>
                     <!-- Updates Section -->
-                    
+
                     <section layout:fragment="content">
                         <p>isi konten</p>
                     </section>
-                    
+
                     <!-- Page Footer-->
                     <footer class="main-footer">
                         <div class="container-fluid">
