--- a/src/main/resources/templates/permission/form.html
+++ b/src/main/resources/templates/permission/form.html
@@ -11,34 +11,38 @@
     </head>
     <body>
         <section layout:fragment="content">
-            <div class="col-lg-12">
-                <div class="card">
-                    <div class="card-close">
-                        <div class="dropdown">
-                            <button type="button" id="closeCard1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-ellipsis-v"></i></button>
-                            <div aria-labelledby="closeCard1" class="dropdown-menu dropdown-menu-right has-shadow"><a href="#" class="dropdown-item remove"> <i class="fa fa-times"></i>Close</a><a href="#" class="dropdown-item edit"> <i class="fa fa-gear"></i>Edit</a></div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="card">
+                            <div class="card-close">
+                                <div class="dropdown">
+                                    <button type="button" id="closeCard1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-ellipsis-v"></i></button>
+                                    <div aria-labelledby="closeCard1" class="dropdown-menu dropdown-menu-right has-shadow"><a href="#" class="dropdown-item remove"> <i class="fa fa-times"></i>Close</a><a href="#" class="dropdown-item edit"> <i class="fa fa-gear"></i>Edit</a></div>
+                                </div>
+                            </div>
+                            <div class="card-header d-flex align-items-center">
+                                <h3 class="h4">Permission Form</h3>
+                            </div>
+                            <div class="card-body">
+                                <form th:action="@{/management/permission/form}" th:object="${permission}" th:method="post">
+                                    <input type="hidden" th:field="*{id}" />
+                                    <div class="form-group">
+                                        <label class="form-control-label">Label</label>
+                                        <input type="text" th:field="*{permissionLabel}" placeholder="Label" class="form-control">
+                                        <div class="help-block with-errors" th:if="${#fields.hasErrors('permissionLabel')}" th:errors="*{permissionLabel}"></div>
+                                    </div>
+                                    <div class="form-group">       
+                                        <label class="form-control-label">Value</label>
+                                        <input type="text" th:field="*{permissionValue}" placeholder="Value" class="form-control">
+                                        <div class="help-block with-errors" th:if="${#fields.hasErrors('permissionValue')}" th:errors="*{permissionValue}"></div>
+                                    </div>
+                                    <div class="form-group">       
+                                        <input type="submit" value="Submit" class="btn btn-primary">
+                                    </div>
+                                </form>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card-header d-flex align-items-center">
-                        <h3 class="h4">Permission Form</h3>
-                    </div>
-                    <div class="card-body">
-                        <form th:action="@{/management/permission/form}" th:object="${permission}" th:method="post">
-                            <input type="hidden" th:field="*{id}" />
-                            <div class="form-group">
-                                <label class="form-control-label">Label</label>
-                                <input type="text" th:field="*{permissionLabel}" placeholder="Label" class="form-control">
-                                <div class="help-block with-errors" th:if="${#fields.hasErrors('permissionLabel')}" th:errors="*{permissionLabel}"></div>
-                            </div>
-                            <div class="form-group">       
-                                <label class="form-control-label">Value</label>
-                                <input type="text" th:field="*{permissionValue}" placeholder="Value" class="form-control">
-                                <div class="help-block with-errors" th:if="${#fields.hasErrors('permissionValue')}" th:errors="*{permissionValue}"></div>
-                            </div>
-                            <div class="form-group">       
-                                <input type="submit" value="Save" class="btn btn-primary">
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
