--- a/src/main/resources/templates/client/form.html
+++ b/src/main/resources/templates/client/form.html
@@ -98,7 +98,7 @@
                                         <div class="help-block with-errors" th:if="${#fields.hasErrors('autoApprove')}" th:errors="*{autoApprove}"></div>
                                     </div>
                                     <div class="box-footer">
-                                        <button type="submit" class="btn btn-success pull-right"><i class="fa fa-save"></i> Save</button>
+                                        <button type="submit" class="btn btn-success"><i class="fa fa-save"></i> Submit</button>
                                     </div>
                                 </form>
                             </div>
