--- a/src/main/resources/templates/permission/form.html
+++ b/src/main/resources/templates/permission/form.html
@@ -38,7 +38,7 @@
                                         <div class="help-block with-errors" th:if="${#fields.hasErrors('permissionValue')}" th:errors="*{permissionValue}"></div>
                                     </div>
                                     <div class="form-group">       
-                                        <input type="submit" value="Submit" class="btn btn-primary">
+                                        <button type="submit" class="btn btn-success"><i class="fa fa-save"></i> Submit</button>
                                     </div>
                                 </form>
                             </div>
