--- a/src/main/resources/templates/role/list.html
+++ b/src/main/resources/templates/role/list.html
@@ -10,80 +10,86 @@
     </head>
     <body>
         <section layout:fragment="content">
-            <div class="col-lg-12">
-                <p>
-                    <a th:href="@{/management/role/form}" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Data Role</a>
-                    &nbsp; &nbsp;
-                </p>
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="card">
-                            <div class="card-header d-flex align-items-center">
-                                <h3 class="h4">Cari Data User</h3>
-                            </div>
-                            <div class="card-body">
-                                <form class="form-inline" th:action="@{/role/list}" method="get">
-                                    <div class="form-group">
-                                        <label for="search" class="sr-only">Search</label>
-                                        <input type="text" 
-                                               name="key" 
-                                               placeholder="Nomor Debitur" 
-                                               class="mx-sm-3 form-control" 
-                                               th:if="${key == null}" />
-                                        <input type="text" 
-                                               name="key" 
-                                               placeholder="Nomor Debitur" 
-                                               class="mx-sm-3 form-control" 
-                                               th:if="${key != null}"
-                                               th:value="${key}" />
-                                        <button class="btn btn-info" type="submit"><i class="fa fa-search"></i> Search</button>
+                        <p>
+                            <a th:href="@{/management/role/form}" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Data Role</a>
+                            &nbsp; &nbsp;
+                        </p>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="card">
+                                    <div class="card-header d-flex align-items-center">
+                                        <h3 class="h4">Cari Data User</h3>
                                     </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-12">
-                        <div class="card">
-                            <div class="card-header d-flex align-items-center">
-                                <h3 class="h4">Daftar User</h3>
-                            </div>
-                            <div class="card-body">
-                                <table class="table table-striped table-hover">
-                                    <thead>
-                                        <tr>
-                                            <th>Name</th>
-                                            <th>Description</th>
-                                            <th>Permissions</th>
-                                            <th>Action</th>
-
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr th:each="a : ${data.content}">
-                                            <td th:text= "${a.name}"></td>
-                                            <td th:text= "${a.description}"></td>
-                                            <td>
-                                                <span style="margin-right: 5px" class="label label-info" th:each="y : ${a.permissions}" th:text="${y.permissionValue}"></span>
-                                            </td>
-                                            <td>
-                                                <a th:href="@{/management/role/form(id=${a.id})}" 
-                                                   class="btn btn-info btn-sm">
-                                                    <i class="fa fa-edit"></i> Edit </a>
-
-                                                <a th:href="@{/management/role/delete(id=${a.id})}" 
-                                                   class="btn btn-danger btn-sm">
-                                                    <i class="fa fa-trash"></i> Delete </a>
-                                            </td>
-                                        </tr>  
-                                    </tbody>
-                                </table>
-                            </div>
-                            <div class="card-footer">
-                                <center>
-                                    <div th:if="${not #lists.isEmpty(data.content)}">
-                                        <ul class="pagination" sd:pagination="full"></ul>
+                                    <div class="card-body">
+                                        <form class="form-inline" th:action="@{/management/role/list}" method="get">
+                                            <div class="form-group">
+                                                <label for="search" class="sr-only">Search</label>
+                                                <input type="text" 
+                                                       name="key" 
+                                                       placeholder="Nomor Debitur" 
+                                                       class="mx-sm-3 form-control" 
+                                                       th:if="${key == null}" />
+                                                <input type="text" 
+                                                       name="key" 
+                                                       placeholder="Nomor Debitur" 
+                                                       class="mx-sm-3 form-control" 
+                                                       th:if="${key != null}"
+                                                       th:value="${key}" />
+                                                <button class="btn btn-info" type="submit"><i class="fa fa-search"></i> Search</button>
+                                            </div>
+                                        </form>
                                     </div>
-                                </center>
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="card">
+                                    <div class="card-header d-flex align-items-center">
+                                        <h3 class="h4">Daftar User</h3>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="table-responsive">
+                                            <table class="table table-striped table-hover">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Name</th>
+                                                        <th>Description</th>
+                                                        <th>Permissions</th>
+                                                        <th>Action</th>
+
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr th:each="a : ${data.content}">
+                                                        <td th:text= "${a.name}"></td>
+                                                        <td th:text= "${a.description}"></td>
+                                                        <td>
+                                                            <span style="margin-right: 5px" class="label label-info" th:each="y : ${a.permissions}" th:text="${y.permissionValue}"></span>
+                                                        </td>
+                                                        <td>
+                                                            <a th:href="@{/management/role/form(id=${a.id})}" 
+                                                               class="btn btn-info btn-sm">
+                                                                <i class="fa fa-edit"></i> Edit </a>
+
+                                                            <a th:href="@{/management/role/delete(id=${a.id})}" 
+                                                               class="btn btn-danger btn-sm">
+                                                                <i class="fa fa-trash"></i> Delete </a>
+                                                        </td>
+                                                    </tr>  
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                    <div class="card-footer">
+                                        <center>
+                                            <div th:if="${not #lists.isEmpty(data.content)}">
+                                                <ul class="pagination" sd:pagination="full"></ul>
+                                            </div>
+                                        </center>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
