--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -14,7 +14,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <p>
-                            <a th:href="@{/management/user/form}" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Data Debitur</a>
+                            <a th:href="@{/management/user/form}" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Data User</a>
                             &nbsp; &nbsp;
                         </p>
                         <div class="row">
