penamaan judul form search

--- a/src/main/resources/templates/client/list.html
+++ b/src/main/resources/templates/client/list.html
@@ -21,7 +21,7 @@
                             <div class="col-lg-12">
                                 <div class="card">
                                     <div class="card-header d-flex align-items-center">
-                                        <h3 class="h4">Cari Data User</h3>
+                                        <h3 class="h4">Cari Data Client</h3>
                                     </div>
                                     <div class="card-body">
                                         <form class="form-inline" th:action="@{/management/client/list}" method="get">
