--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -77,7 +77,8 @@
                                         <div class="form-group">
                                             <input id="login-password" type="password" name="password" required="" class="input-material">
                                             <label for="login-password" class="label-material">Password</label>
-                                        </div><button type="submit" name="login" class="btn btn-success">Login</button>
+                                        </div>
+                                            <button type="submit" name="login" class="btn btn-primary">Login</button>
                                         <!-- This should be submit button but I replaced it with <a> for demo purposes-->
                                     </form><a th:href="@{/reset}" class="forgot-pass">Forgot Password?</a><br>
                                 </div>
